--- a/style.scss
+++ b/style.scss
@@ -398,6 +398,7 @@ p {
     width: 8vw;
     background-image: url(assets/images/icon_cam.svg);
     background-repeat: no-repeat;
+    background-size: contain;
 }
 
 .video {
@@ -410,7 +411,7 @@ p {
 }
 
 .repair {
-    height: 2663px;
+    height: 179vw;
     width: 100%;
     background-image: url(assets/images/bg_build.png);
     background-repeat: no-repeat;
@@ -451,6 +452,8 @@ p {
 
 .repair__sub__input {
     margin-right: 3.3vw;
+    height: 3vw;
+    width: 15.5vw;
     border: 0;
     border-bottom: solid 1px;
     border-color: rgba(54, 54, 54, 0.3);
@@ -470,8 +473,6 @@ p {
 }
 
 input[type=text] {
-    height: 3vw;
-    width: 15.5vw;
     background: none;
     &:focus {
         outline: none;
@@ -524,10 +525,11 @@ button {
 }
 
 .mycheckbox__new {
+    position: relative;
     width: 1.2vw;
     height: 1.2vw;
+    background-color: $orange-color;
     border: 1px solid #222;
-    position: relative;
     &::after {
         content: "";
         left: 50%;
@@ -634,32 +636,424 @@ input:required {
     width: 15.3vw;
     height: 3.6vw;
     color: #ffffff;
-    background-color: #E3B873;
+    background-color: $orange-color;
     border: 0;
     border-radius: 2px;
     font-family: "Yeseva One";
     font-size: $vw18px;
     box-shadow: 5px 5px 10px rgba(227, 184, 115, 0.3);
     &:first-child {
-        left: 12.8vw;
+        left: 12.7vw;
     }
     &:nth-child(2) {
         left: 41.2vw;
     }
     &:last-child {
-        left: 69.7vw;
+        left: 69.55vw;
+    }
+    &:hover {
+        transform: scale(1.1, 1.1);
     }
 }
 
+.amenities {
+    margin-top: 26vw
+}
 
+.amenities__info {
+    display: flex;
+    flex-flow: wrap;
+}
+
+.amenities__info__circle {
+    margin-left: -7vw;
+    height: 46vw;
+    width: 52.3vw;;
+    background-image: url(assets/images/aclipse.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    p {
+        font-family: Futuramediumc;
+        font-size: $vw18px;
+        &:first-child {
+            padding-top: 7.7vw;
+            margin-left: 28vw;
+        }
+        &:nth-child(2) {
+            margin-top: 5.4vw;
+            margin-left: 32.7vw;
+        }
+        &:nth-child(3) {
+            margin-top: 9.2vw;
+            margin-left: 34.3vw;
+        }
+        &:last-child {
+            margin-top: 8.7vw;
+            margin-left: 30vw;
+            width: 14vw;
+        }
+        
+    }
+}
+
+.amenities__info__form {
+    margin-left: 3.6vw;
+    margin-top: 6.5vw;
+    height: 34vw;
+    width: 33.8vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    background-image: url(assets/images/bg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.amenities__info__form__text {
+    width: 16vw;
+    text-align: center;
+    font-family:Futurademic;
+    font-size: 1.35vw;
+    color: #ffffff;
+
+}
+
+.amenities__info__form__name {
+    width: 10.7vw;
+    margin-bottom: -3vw;
+    color: rgba(255, 255, 255, 0.5);
+}
+
+.amenities__info__form__input {
+    width: 27vw;
+    margin-right: 0;
+    border-color: rgba(255, 255, 255, 0.15);
+    color: #ffffff;
+    font-family: Futurademic;
+    font-size: $vw18px;
+}
+
+.amenities__info__form__check {
+    width: 27vw;
+    display: flex;
+}
+
+.amenities__info__form__check__text {
+    margin-left: 0.7vw;
+    color: #ffffff;
+    font-family: Futurabookc;
+    font-size: 1.1vw;
+}
+
+.amenities__info__form__btn {
+    margin-left: 13.7vw;
+}
+
+.amenities__save {
+    width: 77.5vw;
+    margin-top: -3.7vw;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.amenities__save__icon {
+    height: 7.5vw;
+    width: 7.5vw;
+
+}
+
+.amenities__save__text {
+    margin-top: 1.3vw;
+    width: 17vw;
+    font-family: Futurademic;
+    font-size: 1.53vw;
+    color: $orange-color;
+    text-shadow: 0px 3px 10px rgba(227, 184, 115, 0.15);
+}
+
+.styles {
+    height: 60vw;
+    display: flex;
+    background-image: url(assets/images/house.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.styles__list {
+    margin-top: 9.2vw;
+    margin-left: 6.6vw;
+}
+
+.styles__list__name {
+    width: 20vw;
+    font-family: "Yeseva One";
+    font-size: 1.8vw;
+    color: $orange-color;
+}
+
+.styles__list__text {
+    margin-top: 3.1vw;
+    padding: 0;
+    li {
+        margin-bottom: 1.5vw;
+        display: block;
+        font-family: "Proxima Nova";
+        font-size: 1.3vw;
+        color: #ffffff;
+        a {
+            color: #ffffff;
+            &:hover {
+            border-bottom: solid 0.01vw $orange-color;
+            padding-bottom: 0.2vw;
+            color: $orange-color;
+            opacity: 1;
+            }
+        }
+        
+    }
+}
+
+.styles__images_first {
+    margin-left: 13vw;
+    margin-top: -2.7vw;
+    width: 26.2vw;
+    img {
+        &:first-child {
+            margin-bottom: 2.4vw;
+            width: 24.5vw;
+            height: 38.6vw;
+        }
+        &:last-child {
+            width: 24.5vw;
+            height: 24.2vw;
+        }
+    }
+}
+
+.styles__images_second {
+    margin-left: 1.2vw;
+    margin-top: -7.5vw;
+    width: 26.2vw;
+    img {
+        &:first-child {
+            margin-bottom: 2.4vw;
+            width: 24.6vw;
+            height: 19.1vw;
+        }
+        &:last-child {
+            width: 24.6vw;
+            height: 43.4vw;
+        }
+    }
+}
+
+.design {
+    margin-top: 10.3vw;
+    height: 29.2vw;
+    background-image: url(assets/images/bg_build.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    .container {
+        margin-left: 6.7vw;
+        margin-right: 6.7vw;
+        flex-direction: column;
+    }
+}
+
+.design__head {
+    text-align: -webkit-center;
+}
+
+.design__head__name__text {
+    font-family: "Yeseva One";
+    font-size: 1.3vw;
+}
+
+.design__head__name__icon {
+    margin-top: 0.8vw;
+    margin-bottom: 1.5vw;
+    height: 2vw;
+    width: 7.6vw;
+    background-image: url(assets/images/icon_pencil.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+.design__head__text {
+    width: 44vw;
+    font-family: Futurabookc;
+    font-size: 1.3vw;
+}
+
+.design__price__info {
+    top: 405.5vw;
+}
+
+.design__price__info__text {
+    height: fit-content;
+    ul {
+        margin-bottom: 3.4vw;
+    }
+}
+
+.design__price__btns__cost {
+    &:first-child {
+        top: 417.9vw;
+    }
+    &:nth-child(2) {
+        top: 422.8vw;
+    }
+    &:last-child {
+        top: 431.1vw;
+    }
+}
 
 .working {
-    height: 20vw;
+    height: 1615px;
     width: 100%;
     background-image: url(assets/images/bg.png);
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+.working__slider {
+    margin-top: 28.6vw;
+    width: 22.5vw;
+    height: 34.4vw;
+}
+
+.working__slider__how {
+    margin-bottom: 1vw;
+    font-family: $base-font;
+    font-size: 1vw;
+    color: #ffffff;
+}
+
+.working__slider__name {
+    width: 12vw;
+    margin-bottom: 6.3vw;
+    font-family: "Yeseva One";
+    font-size: 1.8vw;
+    color: $orange-color;
+    &:after {
+        content: "";
+        margin-left: 8vw;
+        position: absolute;
+        top: 435.4vw;
+        display: inline-block;
+        box-sizing: border-box;
+        border: solid $orange-color;
+        border-width: 3vw 1px;
+        transform: rotate(90deg);
+    }
+}
+
+.working__slider__pages {
+    margin-bottom: 1.5vw;
+    font-family: "Yeseva One";
+    font-size: $vw18px;
+    color: #ffffff;
+}
+
+.working__slider__text_name {
+    margin-bottom: 1vw;
+    font-family: "Yeseva One";
+    font-size: 1vw;
+    color: $orange-color;
+}
+
+.working__slider__text {
+    margin-bottom: 1vw;
+    font-family: Futurabookc;
+    font-size: 1vw;
+    color: #ffffff;
+}
+
+.working__slider__carousel {
+    width: 19vw;
+}
+
+.working__pages {
+    margin-top: 32vw;
+}
+
+.working__pages__steps {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.working__pages__steps__stage {
+    margin-left: 14.6vw;
+    margin-top: 2.4vw;
+    width: 8vw;
+    font-size: 1vw;
+    color: #ffffff;
+    opacity: 0.3;
+    &:hover {
+        opacity: 1;
+        a {
+            border-bottom: solid 0.01vw $orange-color;
+            padding-bottom: 0.3vw;
+            
+        }
+    }
+}
+
+.working__pages__steps__stage__number {
+    font-family: "Yeseva One";
+    color: #ffffff;
+}
+
+.working__pages__steps__stage__text {
+    margin-top: $vw18px;
+    font-family: Futurabookc;
+}
+
+.working__pages__image {
+    margin-top: 3vw;
+    margin-left: 14.8vw;
+    width: 51.4vw;
+    height: 25vw;
+    background-image: url(assets/images/stages.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.team {
+    position: relative;
+    bottom: 27.4vw;
+}
+
+.team__head {
+    color: #ffffff;
+    text-align: -webkit-center;
+}
+
+.team__head__name {
+    margin-bottom: 0.8vw;
+    font-family: "Yeseva One";
+    font-size: 1.34vw;
+}
+.team__head__icon {
+    height: 2vw;
+    width: 7.6vw;
+    background-image: url(assets/images/icon_heat.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+.team__head__text {
+    margin-top: 1.6vw;
+    width: 30vw;
+    font-family: Futurabookc;
+    font-size: 1.34vw;
+}
+
+
+
+
+
+
 
 @font-face {
     font-family: Futurademic;
@@ -674,5 +1068,15 @@ input:required {
 @font-face {
     font-family: "Yeseva One";
     src: url(assets/fonts/Yeseva_One.ttf);
+    
+}
+@font-face {
+    font-family: Futuramediumc;
+    src: url(assets/fonts/Futuramediumc.otf);
+    
+}
+@font-face {
+    font-family: "Proxima Nova";
+    src: url(assets/fonts/Proxima_Nova.ttf);
     
 }
