--- a/style.css
+++ b/style.css
@@ -636,9 +636,6 @@ input:required {
 .price__btns__cost:last-child {
   left: 69.55vw;
 }
-.price__btns__cost:hover {
-  transform: scale(1.1, 1.1);
-}
 
 .amenities {
   margin-top: 26vw;
@@ -1022,6 +1019,103 @@ input:required {
   width: 30vw;
   font-family: Futurabookc;
   font-size: 1.34vw;
+}
+
+.team__people {
+  margin-top: 5.4vw;
+}
+.team__people .container {
+  margin-left: 6.7vw;
+  margin-right: 6.7vw;
+  flex-direction: column;
+}
+
+.team__people__image {
+  display: flex;
+  justify-content: space-around;
+}
+
+.team__people__image__slide {
+  height: 23.9vw;
+  width: 18.2vw;
+}
+
+.team__people__icons {
+  position: absolute;
+  top: 11vw;
+  left: 9.5vw;
+}
+
+.team__people__icons__image {
+  height: 7.4vw;
+  width: 7.4vw;
+}
+.team__people__icons__image:nth-child(2) {
+  margin-left: 21vw;
+  margin-right: 21.3vw;
+}
+
+.team__people__info {
+  top: 33vw;
+}
+
+.team__people__info__text {
+  margin-left: 5.6vw;
+  height: 9.2vw;
+  width: 15.6vw;
+}
+.team__people__info__text:nth-child(2) {
+  margin-left: 13.2vw;
+  margin-right: 7.8vw;
+}
+
+.team__people__info__text__name {
+  margin-left: 0;
+  margin-bottom: 0.7vw;
+  margin-top: 1.2vw;
+  text-align: center;
+}
+
+.team__people__info__text__speciality {
+  font-family: Futurabookc;
+  font-size: 1.2vw;
+  color: #959595;
+  text-align: center;
+}
+
+.team__people__btns__stage {
+  top: 39.1vw;
+  width: 15.6vw;
+  height: 3.1vw;
+  font-size: 0.9vw;
+}
+.team__people__btns__stage:first-child {
+  left: 14.3vw;
+}
+.team__people__btns__stage:nth-child(2) {
+  left: 43.1vw;
+}
+.team__people__btns__stage:last-child {
+  left: 72.1vw;
+}
+
+.team__icon__line {
+  margin-left: 49%;
+  margin-top: 7.3vw;
+  height: 0.2vw;
+  width: 3.7vw;
+  background-image: url(assets/images/icon_line.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.team_info {
+  text-align: -webkit-center;
+  margin-top: 1.2vw;
+}
+
+.team__info__text {
+  width: 29vw;
 }
 
 @font-face {
