finish desktop-version

--- a/style.scss
+++ b/style.scss
@@ -5,6 +5,7 @@ $base-font-size: 0.9vw;
 $vw18px: 1.2vw;
 
 body {
+    overflow-x: hidden !important;
     margin: 0;
 }
 
@@ -63,12 +64,19 @@ p {
     li {
         display: inline;
         a {
-            color: #ffffff;
+            &:not(.main) {
+                color: #ffffff;
+            }
+            
             &:hover {
                 color: $orange-color;
-            }
+            }            
         }
     }
+}
+
+.main {
+    color: $orange-color;
 }
 
 .header__contacts {
@@ -294,14 +302,23 @@ p {
     li {
         display: inline;
         a {
-            color: #ffffff;
-            opacity: 0.3;
+            &:not(.main) {
+                color: #ffffff;
+                opacity: 0.3;
+            }
             &:hover {
                 border-bottom: solid 0.01vw $orange-color;
                 padding-bottom: 0.3vw;
                 color: $orange-color;
                 opacity: 1;
             }
+            
+        }
+        .main {
+            border-bottom: solid 0.01vw $orange-color;
+            padding-bottom: 0.3vw;
+            color: $orange-color;
+            opacity: 1;
         }
     }
 }
@@ -355,6 +372,10 @@ p {
     width: 14vw;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    .main {
+        opacity: 1;
+    }
 }
 
 .slider__info__carousel__arrow_right {
@@ -613,6 +634,7 @@ input:required {
         margin-right: 6.4vw;
     }
     ul {
+        padding-left: 2.7vw;
         margin-top: 1vw;
         margin-left: 0.4vw;
         line-height: 1.7vw;
@@ -847,11 +869,7 @@ input:required {
 }
 
 .design {
-    margin-top: 10.3vw;
     height: 29.2vw;
-    background-image: url(assets/images/bg_build.png);
-    background-repeat: no-repeat;
-    background-size: cover;
     .container {
         margin-left: 6.7vw;
         margin-right: 6.7vw;
@@ -860,6 +878,7 @@ input:required {
 }
 
 .design__head {
+    margin-top: 10.3vw;
     text-align: -webkit-center;
 }
 
@@ -908,11 +927,15 @@ input:required {
 }
 
 .working {
-    height: 1615px;
+    height: 107.5vw;
     width: 100%;
     background-image: url(assets/images/bg.png);
     background-repeat: no-repeat;
     background-size: cover;
+    .container {
+        margin-top: 11vw;
+        margin-left: 8.7vw;
+    }
 }
 
 .working__slider {
@@ -982,7 +1005,7 @@ input:required {
 }
 
 .working__pages__steps__stage {
-    margin-left: 14.6vw;
+    margin-left: 12.7vw;
     margin-top: 2.4vw;
     width: 8vw;
     font-size: 1vw;
@@ -1010,8 +1033,8 @@ input:required {
 
 .working__pages__image {
     margin-top: 3vw;
-    margin-left: 14.8vw;
-    width: 51.4vw;
+    margin-left: 12.8vw;
+    width: 47.8vw;
     height: 25vw;
     background-image: url(assets/images/stages.png);
     background-repeat: no-repeat;
@@ -1019,8 +1042,8 @@ input:required {
 }
 
 .team {
-    position: relative;
-    bottom: 27.4vw;
+    position: absolute;
+    top: 485.4vw;
 }
 
 .team__head {
@@ -1057,6 +1080,7 @@ input:required {
 }
 
 .team__people__image {
+    width: 84.7vw;
     display: flex;
     justify-content: space-around;
 }
@@ -1142,8 +1166,225 @@ input:required {
 
 .team__info__text {
     width: 29vw;
+    font-family: Futurabookc;
+    font-size: 1.34vw;
+    &:first-child {
+        width: 34vw;
+    }
+    &:last-child {
+        width: 40vw;
+    }
 }
 
+.clients {
+    height: 98.5vw;
+    background-image: url(assets/images/white_city.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    .container {
+        flex-direction: column;
+    }
+}
+
+.clients__head {
+    margin-top: 31.3vw;
+    margin-right: 6.5%;
+}
+
+.clients__head__text {
+    width: 24vw;
+}
+
+.clients__head__name__icon {
+    background-image: url(assets/images/icon_hands.svg);
+}
+
+.clients__comments__page {
+    height: 28.6vw;
+    width: 25.14vw;
+    display: flex;
+    flex-flow: wrap;
+    background-color: #ffffff;
+    box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.04);
+    &:nth-child(2) {
+        margin-left: 7vw;
+        margin-right: 7vw;
+    }
+}
+
+.clients__comments {
+    margin-top: 3.4vw;
+    display: flex;
+}
+
+.clients__comments__page__imag {
+    margin-top: 1.6vw;
+    margin-left: 1.4vw;
+    height: 5.2vw;
+    width: 5.2vw;
+}
+
+.clients__comments__page__name {
+    margin-left: 1.4vw;
+    margin-top: 2.8vw;
+    width: 12vw;
+    font-family: "Yeseva One";
+    font-size: $vw18px;
+}
+
+.clients__comments__page__text {
+    margin-left: 1.4vw;
+    margin-top: -6.5vw;
+    width: 21.7vw;
+    font-family: Futurabookc;
+    font-size: 1vw;
+    color: #959595;
+    line-height: 180%;
+}
+
+.clients__comments__box {
+    height: 3.6vw;
+    width: 19.7vw;
+    display: flex;
+    background-color: $orange-color;
+}
+
+.clients__comments__box {
+    display: flex;
+    &:nth-child(2) {
+        margin-left: 12.5vw;
+        margin-right: 12.4vw;
+    }
+}
+
+.clients__comments__boxes {
+    margin-top: -1.7vw;
+    display: flex;
+    
+}
+
+.clients__comments__box__btn {
+    padding-right: 1.1vw;
+    margin-left: 1vw;
+    display: flex;
+    align-items: center;
+    &:first-child {
+        border-right: solid 0.1vw #ffffff;
+    }
+}
+
+.clients__comments__box__text {
+    margin-left: 1.3vw;
+    font-family: "Yeseva One";
+    font-size: 1.1vw;
+    color: #FFFFFF;
+}
+
+.clients__comments__box__icon {
+    height: 2.2vw;
+    width: 2.2vw;
+}
+
+.question {
+    position: absolute;
+    top: 594.4vw;
+    margin-left: 20.5%;
+    width: 59.1vw;
+    height: 29.8vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-image: url(assets/images/bg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: #ffffff;
+}
+
+.question__name {
+    font-family: "Yeseva One";
+    font-size: 1.3vw;
+}
+
+.question__name {
+    margin-top: 2.3vw;
+}
+
+.question_submit {
+    margin-top: 3.1vw;
+    margin-left: 3vw;
+}
+
+.question_submit__text {
+    margin-right: 17.9vw;
+    color: rgba(255, 255, 255, 0.5);
+    &:nth-child(2) {
+        margin-left: -3vw;
+    }
+}
+
+.question_submit__text1 {
+    margin-right: 34vw;
+    color: rgba(255, 255, 255, 0.5);
+}
+
+.question__sub {
+    width: 34.8vw;
+    justify-content: start;
+}
+
+.question__check {
+    margin-top: 3.1vw;
+    margin-bottom: 3.4vw;
+}
+
+.question__sub__input {
+    color: #ffffff;
+    &:last-child {
+        width: 100%;
+    }
+}
+
+.geo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-image: url(assets/images/section_geo.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.geo__name {
+    margin-top: 14.5vw;
+    width: 36vw;
+    text-align: center;
+    font-family: "Yeseva One";
+    font-size: 1.3vw;
+    color: $orange-color;
+}
+
+.geo__map {
+    margin-bottom: 4.4vw;
+    mix-blend-mode: luminosity;
+}
+
+.geo__map__iframe {
+    height: 31.1vw;
+    width: 61.9vw;
+}
+
+.geo__icons {
+    margin-bottom: 2.9vw;
+    margin-top: 1.8vw;
+}
+
+.geo__icons__img {
+    margin-right: 0.9vw;
+    height: 1.9vw;
+    width: 1.9vw;
+    &:hover {
+        transform: scale(1.1, 1.1);
+    }
+}
 
 
 
