fix: edited HTML to execute validator

--- a/style.scss
+++ b/style.scss
@@ -779,6 +779,7 @@ button {
 
 .mycheckbox__new {
     position: relative;
+    display: block;
     width: 1.2vw;
     height: 1.2vw;
     background-color: $orange-color;
