--- a/style.css
+++ b/style.css
@@ -4,9 +4,10 @@ a {
 
 p {
   margin: 0;
+  -webkit-user-select: none;
 }
 
-.body {
+body {
   overflow-x: hidden !important;
   margin: 0;
 }
@@ -60,6 +61,10 @@ p {
   }
 }
 
+.main {
+  color: #E3B873;
+}
+
 .header__nav__menu {
   width: 39vw;
   display: flex;
@@ -75,10 +80,6 @@ p {
   color: #ffffff;
 }
 .header__nav__menu li a:hover {
-  color: #E3B873;
-}
-
-.main {
   color: #E3B873;
 }
 
@@ -264,6 +265,7 @@ p {
 }
 
 .scroll__item {
+  display: block;
   display: flex;
   align-items: center;
 }
@@ -784,6 +786,9 @@ input[type=submit]:hover {
   transform: scale(1.1, 1.1);
 }
 
+button {
+  cursor: pointer;
+}
 button:focus {
   outline: none;
 }
@@ -833,14 +838,14 @@ button:focus {
   display: none;
 }
 .mycheckbox__default:checked + .mycheckbox__new::after {
-  height: 25px;
-  width: 25px;
+  height: 1.2vw;
+  width: 1.28vw;
   border-radius: 4px;
 }
 
 .mycheckbox__new {
-  display: block;
   position: relative;
+  display: block;
   width: 1.2vw;
   height: 1.2vw;
   background-color: #E3B873;
